force-app/main/objects/Bureau_Product__c.object
<CustomObject>
    <description>To link to the Job object for OLB jobs</description>
    <fields>
        <fullName>Bureau_System_Type__c</fullName>
        <formula>TEXT(Bureau_System__r.System__r.System_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managed Services System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bureau_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the Bureau System that the Bureau Product belongs to</description>
        <inlineHelpText>This Bureau product belongs to this Bureau System</inlineHelpText>
        <label>Managed Services System</label>
        <referenceTo>Bureau_System__c</referenceTo>
        <relationshipLabel>Managed Services Products</relationshipLabel>
        <relationshipName>Bureau_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Instrument or Report</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Express Service</fullName>
                </value>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is meant for indicating whether the product is chargeable or not.</description>
        <inlineHelpText>Specify if the product is chargeable</inlineHelpText>
        <label>Chargeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemMasterLookup__c</fullName>
        <label>Item Master Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <formula>TEXT(Item__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Bureau_Item_Master__c.Type__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bureau_Item_Master__c</referenceTo>
        <relationshipName>Bureau_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>Bureau_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>This field represents the Language in which this Bureau Product is required</description>
        <inlineHelpText>Specify the Language in which this Bureau Product is required</inlineHelpText>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (International)</fullName>
                </value>
                <value>
                    <fullName>English (United States)</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Dutch (Belgian)</fullName>
                </value>
                <value>
                    <fullName>English (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>French (Belgian)</fullName>
                </value>
                <value>
                    <fullName>French (Canda)</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Icelandic</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoOfCandidates__c</fullName>
        <formula>IF( OR(Job__r.RecordTypeName__c =&apos;Project_Job&apos;,Job__r.RecordTypeName__c =&apos;Bureau_Service&apos;,Job__r.RecordTypeName__c =&apos;Managed_Service_Commenced&apos;), IF(Units__c==0, Job__r.Number_of_Participants_New__c, Units__c), 
Job__r.NoOfCandidates__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Norm__c</fullName>
        <label>Norm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentItemMasterLookup__c</fullName>
        <label>Parent Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>UnitPrice__c * NoOfCandidates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>This field is meant for specifying a custom number of units for the product</description>
        <inlineHelpText>Specify the number of units used for this product</inlineHelpText>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Managed Services Product</label>
    <nameField>
        <displayFormat>BProd{00000}</displayFormat>
        <label>Managed Services Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>